Добавление CRUD для зеркал
