# controllers/apiserver/systemhandlers/controller.go
@@ -22,6 +22,12 @@ type ParseUseCases interface {
 
 	BooksExists(ctx context.Context, urls []url.URL) ([]agentmodel.AgentBookCheckResult, error)
 	PagesExists(ctx context.Context, urls []agentmodel.AgentPageURL) ([]agentmodel.AgentPageCheckResult, error)
+
+	NewMirror(ctx context.Context, mirror parsing.URLMirror) error
+	UpdateMirror(ctx context.Context, mirror parsing.URLMirror) error
+	DeleteMirror(ctx context.Context, id uuid.UUID) error
+	Mirrors(ctx context.Context) ([]parsing.URLMirror, error)
+	Mirror(ctx context.Context, id uuid.UUID) (parsing.URLMirror, error)
 }
 
 type WebAPIUseCases interface {
